--- a/package.json
+++ b/package.json
@@ -7,7 +7,13 @@
     },
     "devDependencies": {
         "axios": "^1.7.4",
+        "laravel-datatables-vite": "^0.5.2",
         "laravel-vite-plugin": "^1.0",
         "vite": "^5.0"
+    },
+    "dependencies": {
+        "@popperjs/core": "^2.11.8",
+        "bootstrap": "^5.3.3",
+        "sass": "^1.79.5"
     }
 }
